Bug 375868 - Window decorations not rendering properly on HiDPI
Summary: Window decorations not rendering properly on HiDPI
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: decorations (other bugs)
Version First Reported In: 5.9.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-02-01 22:00 UTC by Jose Narvaez
Modified: 2017-03-20 16:06 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Kwin decorations not rendering properly (592.06 KB, image/png)
2017-02-01 22:00 UTC, Jose Narvaez
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jose Narvaez 2017-02-01 22:00:04 UTC
Created attachment 103755 [details]
Kwin decorations not rendering properly

I'm using KDE Neon with Plasma v5.9.0, KDE Frameworks v5.31.0 and Qt v5.7.1.

I'm running on a HiDPI configuration:

Resolution: 3200x1800
Scale Factor: 2

When I try to use any window decoration other than the ones that come with KDE Neon such as Breeze or Plastik they work fine however when I try to use any of the decorations that I've fetched from the KDE store Such as the Arc KDE https://store.kde.org/p/1167637/ it looks OK on the preview but it does not render properly when I activate it.

You can see in the attached screenshot the decorations don't get properly rendered.

Thanks in Advance!
Comment 1 Eike Hein 2017-02-07 11:21:53 UTC
I see the same thing on my system with master + Qt 5.8 branch + 2x scaling.
Comment 2 David Edmundson 2017-02-07 12:00:23 UTC
Kwin disables Qt internal High DPI scaling, so that doesn't make much sense.

Eike, did you patch Kwin first? 
does it go away if you disable the Qt scaling?
What theme were you using?
Comment 3 Eike Hein 2017-02-07 12:31:04 UTC
No, I didn't patch anything. I used the Ark theme the user suggested. I didn't try without scaling.
Comment 4 Bruno Pagani 2017-02-07 14:47:36 UTC
Same issue here.

Preview is also borked. See here for my initial report, which includes screen captures: https://github.com/PapirusDevelopmentTeam/arc-kde/issues/17

I’m running ArchLinux up-to-date, so currently QT 5.8 and Plasma 5.9.

Scaling is done by `ServerArguments=-nolisten tcp -dpi 192` in sddm.conf.
Comment 5 Jose Narvaez 2017-02-20 18:34:34 UTC
Hello People!

Has anyone had the chance to take a look at this one?

Thanks in Advance!
Comment 6 Marco Martin 2017-03-20 16:06:47 UTC
Git commit bfbcd0197181657d5dfac953ad77dd3de2ee7e92 by Marco Martin.
Committed on 20/03/2017 at 16:06.
Pushed by mart into branch 'master'.

support for high dpi in aurorae

Summary:
aurorae themes have hardoded sizes in pixels in their config files,
but the framesvgs scale by themselves based on font dpi leading
to corrupt results

scale all sizes using the same logic(that's also used in c++ based
kdecorations), gives correct looking scaled decorations

Test Plan: see screenshot

Reviewers: #plasma, graesslin

Reviewed By: #plasma, graesslin

Subscribers: plasma-devel, kwin, #kwin

Tags: #kwin

Differential Revision: https://phabricator.kde.org/D5114

M  +46   -35   plugins/kdecorations/aurorae/src/lib/themeconfig.cpp

https://commits.kde.org/kwin/bfbcd0197181657d5dfac953ad77dd3de2ee7e92